# image-modification-task-mpi

./: CMakeLists.txt  README.md
src/: BaseClass.hpp  ImageRotator.cpp  ImageRotator.hpp  ImageToGreyscale.cpp  ImageToGreyscale.hpp  main.cpp
